# sillytavern-scripts

./: README.md  catalog.json
.gstack/qa-reports/: baseline.json  qa-report-auto-card-studio-android-2026-07-24.md
.gstack/qa-reports/screenshots/: initial.xml
apps/auto-card-studio/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/auto-card-studio/scripts/: extract-step-one-profile.mjs  m1b-mock-openai.mjs
apps/auto-card-studio/src/: adapters.ts  auto-workflow-profile.generated.ts  core.test.ts  core.ts  delivery.test.ts  delivery.ts  disclosure.test.ts  disclosure.ts  icons.ts  main.ts  mobile-ui.test.ts  model.test.ts  model.ts  notice-timer.ts  ports.ts  profile.test.ts  profile.ts  step-tutorial-notes.ts  styles.css  workflow-config.ts  workflow.test.ts  workflow.ts
apps/auto-card-studio/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/auto-card-studio/src-tauri/capabilities/: default.json
apps/auto-card-studio/src-tauri/icons/: icon.icns
apps/auto-card-studio/src-tauri/src/: lib.rs  main.rs
docs/character-creation/: auto-card-studio-android-handoff.md  auto-card-studio-android-probe-report.md  auto-card-studio-android-ui-parity-spec.md  auto-card-studio-app-migration.md  auto-card-studio-m1-stage-record.md  auto-card-studio-m1b-stage-record.md  auto-card-studio-mobile-migration-report.md  auto-card-studio.md
probes/tauri-android/: README.md  index.html  package.json  pnpm-lock.yaml
probes/tauri-android/src/: main.ts  styles.css
probes/tauri-android/src-tauri/: Cargo.toml  tauri.conf.json
probes/tauri-android/src-tauri/capabilities/: default.json
probes/tauri-android/src-tauri/src/: lib.rs  main.rs
