[package]
name = "auto-card-studio"
version = "0.2.0"
description = "Independent Android and desktop app for A.U.T.O Card Studio"
authors = ["NightingNine"]
edition = "2024"

[lib]
name = "auto_card_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"

[profile.dev.package.scrypt]
opt-level = 3
